fix nav selector on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -301,7 +301,7 @@ footer {
     padding: 2rem 2rem 4rem 2rem;
   }
   
-  .app nav {
+  nav {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
